--- a/docs/docs/components/memories.mdx
+++ b/docs/docs/components/memories.mdx
@@ -4,125 +4,124 @@ import Admonition from '@theme/Admonition';
 
 <Admonition type="caution" icon="🚧" title="ZONE UNDER CONSTRUCTION">
     <p>
-        We appreciate your understanding as we polish our documentation – it may contain some rough edges. Share your feedback or report issues to help us improve! 🛠️📝
+        Thanks for your patience as we improve our documentation—it might have some rough edges. Share your feedback or report issues to help us enhance it! 🛠️📝
     </p>
 </Admonition>
 
-Memory is a concept in chat-based applications that allows the system to remember previous interactions. It helps in maintaining the context of the conversation and enables the system to understand new messages in relation to past messages.
+Memory is a concept in chat-based applications that allows the system to remember previous interactions. This capability helps maintain the context of the conversation and enables the system to understand new messages in light of past messages.
 
 ---
 
 ### MessageHistory
 
-This component is designed to retrieve stored messages based on various filters such as sender type, sender name, session ID, and a specific file path where messages are stored. It allows for a flexible retrieval of chat history, providing insights into past interactions.
+This component retrieves stored messages using various filters such as sender type, sender name, session ID, and the specific file path where messages are stored. It offers flexible retrieval of chat history, providing insights into past interactions.
 
-**Params**
+**Parameters**
 
-- **Sender Type:** (Optional) Specifies the type of the sender. Options are _`"Machine"`_, _`"User"`_, or _`"Machine and User"`_. Filters the messages by the type of the sender.
-
-- **Sender Name:** (Optional) Specifies the name of the sender. Filters the messages by the name of the sender.
-
-- **Session ID:** (Optional) Specifies the session ID of the chat history. Filters the messages belonging to a specific session.
-
-- **Number of Messages:** Specifies the number of messages to retrieve. Defaults to _`5`_. Determines how many recent messages from the chat history to fetch.
+- **sender_type** (optional): Specifies the sender's type. Options include `"Machine"`, `"User"`, or `"Machine and User"`. Filters messages by the sender type.
+- **sender_name** (optional): Specifies the sender's name. Filters messages by the sender's name.
+- **session_id** (optional): Specifies the session ID of the chat history. Filters messages by session.
+- **number_of_messages**: Specifies the number of messages to retrieve. Defaults to `5`. Determines the number of recent messages from the chat history to fetch.
 
 <Admonition type="note" title="Note">
     <p>
-        The component retrieves messages based on the provided criteria, including the specific file path for stored messages. If no specific criteria are provided, it will return the most recent messages up to the specified limit. This component can be used to review past interactions and analyze the flow of conversations.
+        The component retrieves messages based on the provided criteria, including the specific file path for stored messages. If no specific criteria are provided, it returns the most recent messages up to the specified limit. This component can be used to review past interactions and analyze conversation flows.
     </p>
 </Admonition>
 
 ### ConversationBufferMemory
 
-The `ConversationBufferMemory` component is a type of memory system that plainly stores the last few inputs and outputs of a conversation.
+The `ConversationBufferMemory` component stores the last few inputs and outputs of a conversation.
 
-**Params**
+**Parameters**
 
- - **input_key:** Used to specify the key under which the user input will be stored in the conversation memory. It allows you to provide the user's input to the chain for processing and generating a response.
-- **memory_key:** Specifies the prompt variable name where the memory will store and retrieve the chat messages. It allows for the preservation of the conversation history throughout the interaction with the language model – defaults to `chat_history`.
-- **output_key:** Used to specify the key under which the generated response will be stored in the conversation memory. It allows you to retrieve the response using the specified key.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string. The default is `False`.
+- **input_key**: Specifies the key under which the user input will be stored in the conversation memory.
+- **memory_key**: Specifies the prompt variable name where the memory will store and retrieve chat messages. Defaults to `chat_history`.
+- **output_key**: Specifies the key under which the generated response will be stored.
+- **return_messages**: Determines whether the history should be returned as a string or as a list of messages. The default is `False`.
 
 ---
 
 ### ConversationBufferWindowMemory
 
-`ConversationBufferWindowMemory` is a variation of the `ConversationBufferMemory` that maintains a list of the recent interactions in a conversation. It only keeps the last K interactions in memory, which can be useful for maintaining a sliding window of the most recent interactions without letting the buffer get too large.
+`ConversationBufferWindowMemory` is a variant of the `ConversationBufferMemory` that keeps only the last K interactions in memory. It's useful for maintaining a sliding window of recent interactions without letting the buffer get too large.
 
-**Params**
+**Parameters**
 
-- **input_key:** Used to specify the keys in the memory object where the input messages should be stored. It allows for the retrieval and manipulation of input messages.
-- **memory_key:** Specifies the prompt variable name where the memory will store and retrieve the chat messages. It allows for the preservation of the conversation history throughout the interaction with the language model. Defaults to `chat_history`.
-- **k:** Used to specify the number of interactions or messages that should be stored in the conversation buffer. It determines the size of the sliding window that keeps track of the most recent interactions.
-- **output_key:** Used to specify the key under which the generated response will be stored in the conversation memory. It allows you to retrieve the response using the specified key.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string. The default is `False`.
+- **input_key**: Specifies the keys in the memory object where input messages are stored.
+- **memory_key**: Specifies the prompt variable name for storing and retrieving chat messages. Defaults to `chat_history`.
+- **k**: Specifies the number of interactions or messages to be stored in the conversation buffer.
+- **output_key**: Specifies the key under which the generated response will be stored.
+- **return_messages**: Determines whether the history should be returned as a string or as a list of messages. The default is `False`.
 
 ---
 
 ### ConversationEntityMemory
 
-The `ConversationEntityMemory` component incorporates intricate memory structures, specifically a key-value store, for entities referenced in a conversation. This facilitates the storage and retrieval of information related to entities that have been mentioned throughout the conversation.
+The `ConversationEntityMemory` component uses a key-value store to manage entities mentioned in conversations. This structure enhances the storage and retrieval of information about specific entities.
 
-**Params**
+**Parameters**
 
-- **Entity Store:** Structure that stores information about specific entities mentioned in a conversation.
-- **LLM:** Language Model to use in the `ConversationEntityMemory`.
-- **chat_history_key:** Specify a unique identifier for the chat history data associated with a particular entity. This allows for organizing and accessing the chat history data for each entity within the conversation entity memory. Defaults to `history`
-- **input_key:** Used to specify the keys in the memory object where the input messages should be stored. It allows for the retrieval and manipulation of input messages.
-- **k:** Refers to the number of entities that can be stored in the memory. It determines the maximum number of entities that can be stored and retrieved from the memory object. Defaults to `10`
-- **output_key:** Used to specify the key under which the generated response will be stored in the conversation memory. It allows you to retrieve the response using the specified key.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string. The default is `False`.
+- **entity_store**: A structure that stores information about entities mentioned in a conversation.
+- **LLM**: Specifies the language model used in the `ConversationEntityMemory`.
+- **chat_history_key**: A unique identifier for the chat history data associated with a particular entity. This key helps organize and access chat history data for each entity within the memory. Defaults to `history`.
+- **input_key**: Identifies where input messages are stored in the memory object, allowing for their retrieval and manipulation.
+- **k**: Specifies the maximum number of entities that can be stored and retrieved from the memory. Defaults to `10`.
+- **output_key**: Identifies the key under which the generated response is stored, enabling retrieval using this key.
+- **return_messages**: Controls whether the history is returned as a string or as a list of messages. Defaults to `False`.
 
 ---
 
 ### ConversationKGMemory
 
-`ConversationKGMemory` is a type of memory that uses a knowledge graph to recreate memory. It allows the extraction of entities and knowledge triplets from a new message, using previous messages as context.
+The `ConversationKGMemory` utilizes a knowledge graph to enhance memory capabilities. It extracts entities and knowledge triplets from new messages, using previous messages as context.
 
-**Params**
+**Parameters**
 
-- **LLM:** Language Model to use in the `ConversationKGMemory`.
-- **input_key:** Used to specify the keys in the memory object where the input messages should be stored. It allows for the retrieval and manipulation of input messages.
-- **k:** Represents the number of previous conversation turns that will be stored in the memory. By setting "k" to 2, it means that the memory will retain the previous 2 conversation turns, allowing the model to access and utilize the information from those turns during the conversation. Defaults to `10`
-- **memory_key:** Specifies the prompt variable name where the memory will store and retrieve the chat messages. It allows for the preservation of the conversation history throughout the interaction with the language model. Defaults to `chat_history`.
-- **output_key:** Used to specify the key under which the generated response will be stored in the conversation memory. It allows you to retrieve the response using the specified key.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string. The default is `False`.
+- **LLM**: Specifies the language model used in the `ConversationKGMemory`.
+- **input_key**: Identifies where input messages are stored in the memory object, facilitating their retrieval and manipulation.
+- **k**: Indicates the number of previous conversation turns stored in memory, allowing the model to utilize information from these turns. Defaults to `10`.
+- **memory_key**: Specifies the prompt variable name where the memory stores and retrieves chat messages. Defaults to `chat_history`.
+- **output_key**: Identifies the key under which the generated response
+
+ is stored, enabling retrieval using this key.
+- **return_messages**: Controls whether the history is returned as a string or as a list of messages. Defaults to `False`.
 
 ---
 
 ### ConversationSummaryMemory
 
-The `ConversationSummaryMemory` is a memory component that creates a summary of the conversation over time. It condenses information from the conversation and stores the current summary in memory. It is particularly useful for longer conversations where keeping the entire message history in the prompt would take up too many tokens.
+The `ConversationSummaryMemory` summarizes conversations over time, condensing information and storing it efficiently. It's particularly useful for long conversations.
 
-**Params**
+**Parameters**
 
-- **LLM:** Language Model to use in the `ConversationSummaryMemory`.
-- **input_key:** Used to specify the keys in the memory object where the input messages should be stored. It allows for the retrieval and manipulation of input messages.
-- **memory_key:** Specifies the prompt variable name where the memory will store and retrieve the chat messages. It allows for the preservation of the conversation history throughout the interaction with the language model. Defaults to `chat_history`.
-- **output_key:** Used to specify the key under which the generated response will be stored in the conversation memory. It allows you to retrieve the response using the specified key.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string. The default is `False`.
+- **LLM**: Specifies the language model used in the `ConversationSummaryMemory`.
+- **input_key**: Identifies where input messages are stored in the memory object, facilitating their retrieval and manipulation.
+- **memory_key**: Specifies the prompt variable name where the memory stores and retrieves chat messages. Defaults to `chat_history`.
+- **output_key**: Identifies the key under which the generated response is stored, enabling retrieval using this key.
+- **return_messages**: Controls whether the history is returned as a string or as a list of messages. Defaults to `False`.
 
 ---
 
 ### PostgresChatMessageHistory
 
-The `PostgresChatMessageHistory` is a memory component that allows for the storage and retrieval of chat message history using a PostgreSQL database. The connection to the PostgreSQL database is established using a connection string, which includes the necessary authentication and database information.
+The `PostgresChatMessageHistory` component uses a PostgreSQL database to store and retrieve chat message history.
 
-**Params**
+**Parameters**
 
-- **connection_string:** Refers to a string that contains the necessary information to establish a connection to a PostgreSQL database. The `connection_string` typically includes details such as the username, password, host, port, and database name required to connect to the PostgreSQL database. Defaults to `postgresql://postgres:mypassword@localhost/chat_history`
-- **session_id:** It is a unique identifier that is used to associate chat message history with a specific session or conversation.
-- **table_name:** Refers to the name of the table in the PostgreSQL database where the chat message history will be stored. Defaults to `message_store`
+- **connection_string**: Specifies the details needed to connect to the PostgreSQL database, including username, password, host, port, and database name. Defaults to `postgresql://postgres:mypassword@localhost/chat_history`.
+- **session_id**: A unique identifier used to link chat message history with a specific session or conversation.
+- **table_name**: The name of the PostgreSQL database table where chat message history is stored. Defaults to `message_store`.
 
 ---
 
 ### VectorRetrieverMemory
 
-The `VectorRetrieverMemory` is a memory component that allows for the retrieval of vectors based on a given query. It is used to perform vector-based searches and retrievals.
+The `VectorRetrieverMemory` retrieves vectors based on queries, facilitating vector-based searches and retrievals.
 
-**Params**
+**Parameters**
 
-- **Retriever:** The retriever used to fetch documents.
-- **input_key:** Used to specify the keys in the memory object where the input messages should be stored. It allows for the retrieval and manipulation of input messages.
-- **memory_key:** Specifies the prompt variable name where the memory will store and retrieve the chat messages. It allows for the preservation of the conversation history throughout the interaction with the language model – defaults to `chat_history`.
-- **return_messages:** Determines whether the history should be returned as a string or as a list of messages. If `return_messages` is set to True, the history will be returned as a list of messages. If `return_messages` is set to False or not specified, the history will be returned as a string – defaults to `False`.
+- **Retriever**: The tool used to fetch documents.
+- **input_key**: Identifies where input messages are stored in the memory object, facilitating their retrieval and manipulation.
+- **memory_key**: Specifies the prompt variable name where the memory stores and retrieves chat messages. Defaults to `chat_history`.
+- **return_messages**: Controls whether the history is returned as a string or as a list of messages. Defaults to `False`.
