--- a/docs/docs/components/data.mdx
+++ b/docs/docs/components/data.mdx
@@ -2,86 +2,59 @@ import Admonition from '@theme/Admonition';
 
 # Data
 
-### API Request
+## API Request
 
-This component makes HTTP requests to the specified URLs.
+This component sends HTTP requests to the specified URLs.
 
-**Params**
+Use this component to interact with external APIs or services and retrieve data. Ensure that the URLs are valid and that you configure the method, headers, body, and timeout correctly.
 
-- **URLs:** URLs to make requests to.
-- **Method:** The HTTP method to use.
-- **Headers:** The headers to send with the request.
-- **Body:** The body to send with the request (for POST, PATCH, PUT).
-- **Timeout:** The timeout to use for the request.
+**Parameters:**
 
-<Admonition type="tip" title="Tip">
-    <p>
-        Use this component to make HTTP requests to external APIs or services and retrieve data.
-    </p>
-    <p>
-        Ensure that you provide valid URLs and configure the method, headers, body, and timeout appropriately.
-    </p>
-</Admonition>
+- **URLs:** The URLs to target.
+- **Method:** The HTTP method, such as GET or POST.
+- **Headers:** The headers to include with the request.
+- **Body:** The data to send with the request (for methods like POST, PATCH, PUT).
+- **Timeout:** The maximum time to wait for a response.
 
 ---
 
-### Directory
+## Directory
 
-This component recursively loads files from a directory.
+This component recursively retrieves files from a specified directory.
 
-**Params**
+Use this component to retrieve various file types, such as text or JSON files, from a directory. Make sure to provide the correct path and configure the other parameters as needed.
 
-- **Path:** The path to the directory.
-- **Types:** File types to load. Leave empty to load all types.
-- **Depth:** Depth to search for files.
-- **Max Concurrency:** The maximum number of concurrent file loading operations.
-- **Load Hidden:** If true, hidden files will be loaded.
-- **Recursive:** If true, the search will be recursive.
-- **Silent Errors:** If true, errors will not raise an exception.
-- **Use Multithreading:** If true, use multithreading for loading files.
+**Parameters:**
 
-<Admonition type="tip" title="Tip">
-    <p>
-        Use this component to load files from a directory, such as text files, JSON files, etc.
-    </p>
-    <p>
-        Ensure that you provide the correct path to the directory and configure other parameters as needed.
-    </p>
-</Admonition>
-
+- **Path:** The directory path.
+- **Types:** The types of files to retrieve. Leave this blank to retrieve all file types.
+- **Depth:** The level of directory depth to search.
+- **Max Concurrency:** The maximum number of simultaneous file loading operations.
+- **Load Hidden:** Set to true to include hidden files.
+- **Recursive:** Set to true to enable recursive search.
+- **Silent Errors:** Set to true to suppress exceptions on errors.
+- **Use Multithreading:** Set to true to use multithreading in file loading.
 
 ---
 
-### File
+## File
 
-This component loads a generic file.
+This component loads a file.
 
-**Params**
+Use this component to load files, such as text or JSON files. Ensure you specify the correct path and configure other parameters as necessary.
 
-- **Path:** The path to the file.
-- **Silent Errors:** If true, errors will not raise an exception.
+**Parameters:**
 
-<Admonition type="tip" title="Tip">
-    <p>
-        Use this component to load a generic file, such as a text file, JSON file, etc.
-    </p>
-    <p>
-        Ensure that you provide the correct path to the file and configure other parameters as needed.
-    </p>
-</Admonition>
+- **Path:** The file path.
+- **Silent Errors:** Set to true to prevent exceptions on errors.
 
 ---
 
-### URL
+## URL
 
-This component fetches content from one or more URLs.
+This component retrieves content from specified URLs.
 
-**Params**
+Ensure the URLs are valid and adjust other parameters as needed.
+**Parameters:**
 
-- **URLs:** The URLs from which content will be fetched.
-
-<Admonition type="tip" title="Tip">
-    <p>
-        Ensure that you provide valid URLs and configure other parameters as needed.
-    </p>
-</Admonition>
+- **URLs:** The URLs to retrieve content from.
