--- a/docs/docs/components/prompts.mdx
+++ b/docs/docs/components/prompts.mdx
@@ -2,26 +2,24 @@ import Admonition from "@theme/Admonition";
 
 # Prompts
 
-<Admonition type="caution" icon="🚧" title="ZONE UNDER CONSTRUCTION">
+<Admonition type="caution" icon="🚧" title="Zone Under Construction">
   <p>
-    We appreciate your understanding as we polish our documentation – it may
-    contain some rough edges. Share your feedback or report issues to help us
-    improve! 🛠️📝
+    Thank you for your patience as we refine our documentation. It may
+    still have some areas under development. Please share your feedback or report any issues to help us improve!
   </p>
 </Admonition>
 
-A prompt refers to the input given to a language model. It is constructed from multiple components and can be parametrized using prompt templates. A prompt template is a reproducible way to generate prompts and allow for easy customization through input variables.
+A prompt is the input provided to a language model, consisting of multiple components and can be parameterized using prompt templates. A prompt template offers a reproducible method for generating prompts, enabling easy customization through input variables.
 
 ---
 
 ### PromptTemplate
 
-The `PromptTemplate` component allows users to create prompts and define variables that provide control over instructing the model. The template can take in a set of variables from the end user and generates the prompt once the conversation is initiated.
+The `PromptTemplate` component enables users to create prompts and define variables that control how the model is instructed. Users can input a set of variables which the template uses to generate the prompt when a conversation starts.
 
 <Admonition type="info">
-  Once a variable is defined in the prompt template, it becomes a component
-  input of its own. Check out [Prompt
-  Customization](../administration/prompt-customization) to learn more.
+  After defining a variable in the prompt template, it acts as its own component
+  input. See [Prompt Customization](../administration/prompt-customization) for more details.
 </Admonition>
 
-- **template:** Template used to format an individual request.
+- **template:** The template used to format an individual request.
